--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -26,11 +26,17 @@ download:
     lin64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-2-linux-gtk-x86_64.tar.gz
     lin32: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-2-linux-gtk.tar.gz
   neon:
-    osx64: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-R-macosx-cocoa-x86_64.tar.gz
-    win64: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-R-win32-x86_64.zip
-    win32: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-R-win32.zip
-    lin64: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-R-linux-gtk-x86_64.tar.gz
-    lin32: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-R-linux-gtk.tar.gz
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-3-macosx-cocoa-x86_64.tar.gz
+    win64: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-3-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-3-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-3-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-3-linux-gtk.tar.gz
+  oxygen:
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-RC3-macosx-cocoa-x86_64.tar.gz
+    win64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-RC3-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-RC3-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-RC3-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-RC3-linux-gtk.tar.gz
 ---
 <div id="page">
 	<div class="download-banner banner">
