--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -32,11 +32,17 @@ download:
     lin64: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-3-linux-gtk-x86_64.tar.gz
     lin32: http://sourceforge.net/projects/jeegen/files/distro/neon/eclipse-jee-generator-neon-3-linux-gtk.tar.gz
   oxygen:
-    osx64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-R-macosx-cocoa-x86_64.tar.bz2
-    win64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-R-win32-x86_64.zip
-    win32: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-R-win32.zip
-    lin64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-R-linux-gtk-x86_64.tar.gz
-    lin32: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-R-linux-gtk.tar.gz
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-1a-macosx-cocoa-x86_64.tar.bz2
+    win64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-1a-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-1a-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-1a-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-1a-linux-gtk.tar.gz
+  photon:
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-M3-macosx-cocoa-x86_64.tar.bz2
+    win64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-M3-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-M3-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-M3-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-M3-linux-gtk.tar.gz
 ---
 <div id="page">
 	<div class="download-banner banner">
