--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -38,11 +38,11 @@ download:
     lin64: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-3a-linux-gtk-x86_64.tar.gz
     lin32: http://sourceforge.net/projects/jeegen/files/distro/oxygen/eclipse-jee-generator-oxygen-3a-linux-gtk.tar.gz
   photon:
-    osx64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-RC1-macosx-cocoa-x86_64.tar.bz2
-    win64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-RC1-win32-x86_64.zip
-    win32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-RC1-win32.zip
-    lin64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-RC1-linux-gtk-x86_64.tar.gz
-    lin32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-RC1-linux-gtk.tar.gz
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-R-macosx-cocoa-x86_64.tar.bz2
+    win64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-R-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-R-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-R-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-photon-R-linux-gtk.tar.gz
 ---
 <div id="page">
 	<div class="download-banner banner">
@@ -73,59 +73,6 @@ download:
 								<a href="{{page.updateSite.snapshot}}"
 									class="btn btn-primary btn-lg"
 									style="width: 70%;">Latest Build Snapshot</a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-
-			<div class="col-md-4">
-				<table class="pricing">
-					<tfoot>
-						<tr>
-							<td></td>
-						</tr>
-					</tfoot>
-					<tbody>
-						<tr>
-							<td class="focus">
-								<h1>Full Neon Eclipse</h1>
-								<h2>Just Download and Unzip</h2>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.neon.osx64}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Max OS X 64 Bit</a>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.neon.lin64}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Linux 64 Bit</a>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.neon.lin32}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Linux 32 Bit</a>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.neon.win64}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Windows 64 Bit</a>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.neon.win32}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Windows 32 Bit</a>
 							</td>
 						</tr>
 					</tbody>
@@ -177,6 +124,59 @@ download:
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
 								<a href="{{page.download.oxygen.win32}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Windows 32 Bit</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+			<div class="col-md-4">
+				<table class="pricing">
+					<tfoot>
+						<tr>
+							<td></td>
+						</tr>
+					</tfoot>
+					<tbody>
+						<tr>
+							<td class="focus">
+								<h1>Full Photon Eclipse</h1>
+								<h2>Just Download and Unzip</h2>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.photon.osx64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Max OS X 64 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.photon.lin64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Linux 64 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.photon.lin32}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Linux 32 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.photon.win64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Windows 64 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.photon.win32}}"
 									class="btn btn-primary btn-lg"
 									style="width: 70%;">Windows 32 Bit</a>
 							</td>
