--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -43,6 +43,12 @@ download:
     win32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2019-03-R-win32.zip
     lin64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2019-03-R-linux-gtk-x86_64.tar.gz
     lin32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2019-03-R-linux-gtk.tar.gz
+  2020-03:
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2020-03-R-macosx-cocoa-x86_64.tar.bz2
+    win64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2020-03-R-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2020-03-R-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2020-03-R-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2020-03-R-linux-gtk.tar.gz
 ---
 <div id="page">
 	<div class="download-banner banner">
@@ -89,59 +95,6 @@ download:
 					<tbody>
 						<tr>
 							<td class="focus">
-								<h1>Full Oxygen Eclipse</h1>
-								<h2>Just Download and Unzip</h2>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.oxygen.osx64}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Max OS X 64 Bit</a>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.oxygen.lin64}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Linux 64 Bit</a>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.oxygen.lin32}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Linux 32 Bit</a>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.oxygen.win64}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Windows 64 Bit</a>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.oxygen.win32}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Windows 32 Bit</a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-
-			<div class="col-md-4">
-				<table class="pricing">
-					<tfoot>
-						<tr>
-							<td></td>
-						</tr>
-					</tfoot>
-					<tbody>
-						<tr>
-							<td class="focus">
 								<h1>Full Photon Eclipse</h1>
 								<h2>Just Download and Unzip</h2>
 							</td>
@@ -162,23 +115,48 @@ download:
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.photon.lin32}}"
-									class="btn btn-primary btn-lg"
-									style="width: 70%;">Linux 32 Bit</a>
-							</td>
-						</tr>
-						<tr>
-							<td style="text-align: center; white-space: nowrap;">
 								<a href="{{page.download.photon.win64}}"
 									class="btn btn-primary btn-lg"
 									style="width: 70%;">Windows 64 Bit</a>
 							</td>
 						</tr>
+					</tbody>
+				</table>
+			</div>
+
+			<div class="col-md-4">
+				<table class="pricing">
+					<tfoot>
+						<tr>
+							<td></td>
+						</tr>
+					</tfoot>
+					<tbody>
+						<tr>
+							<td class="focus">
+								<h1>Full 2020-03 Eclipse</h1>
+								<h2>Just Download and Unzip</h2>
+							</td>
+						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.photon.win32}}"
+								<a href="{{page.download.2020-03.osx64}}"
 									class="btn btn-primary btn-lg"
-									style="width: 70%;">Windows 32 Bit</a>
+									style="width: 70%;">Max OS X 64 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.2020-03.lin64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Linux 64 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.2020-03.win64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Windows 64 Bit</a>
 							</td>
 						</tr>
 					</tbody>
